--- a/outreach.html
+++ b/outreach.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outreach Campaigns | Aamir Shahzad</title>
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/Y94XQYTg/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://i.postimg.cc/MpCXWSqS/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/MKb8cJ7w/apple-touch-icon.png">
@@ -23,7 +23,9 @@
 <body>
 
 <nav>
-        <a href="#" class="logo" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
+        <div class="logo">
+        <a href="#" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
+    </div>
     <ul>
         <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#about">About</a></li>
@@ -70,8 +72,9 @@
 <footer class="footer">
     <div class="footer-top">
         <div class="logo-col">
-                  <a href="index.html" class="footer-logo-link">
-            <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
+        <a href="index.html" class="footer-logo-link">
+        <img src="https://i.postimg.cc/7YsKjswJ/MY-LOGO.png" alt="Logo">
+    </a>
             <p class="tagline">Designing Dreams, Crafting Reality</p>
         </div>
         <div class="footer-right">
