--- a/seo.html
+++ b/seo.html
@@ -6,6 +6,12 @@
     <title>SEO Services | Aamir Shahzad</title>
 
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/Y94XQYTg/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.postimg.cc/MpCXWSqS/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/MKb8cJ7w/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://i.postimg.cc/fW1b7sS0/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://i.postimg.cc/kXZWtLqj/android-chrome-512x512.png">
+    <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +22,9 @@
 <body>
 
 <nav>
-    <div class="logo">Aamir<span>Shahzad</span></div>
+    <div class="logo">
+        <a href="#" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
+    </div>
     <ul>
         <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#about">About</a></li>
@@ -64,7 +72,9 @@
 <footer class="footer">
     <div class="footer-top">
         <div class="logo-col">
+            <a href="index.html" class="footer-logo-link">
             <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
+         </a>
             <p class="tagline">Designing Dreams, Crafting Reality</p>
         </div>
         <div class="footer-right">
