--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -115,6 +115,9 @@
         <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="privacy.html">Privacy Policy</a></p>
     </div>
 </footer>
-
+<script>
+    function refreshPage() {
+        window.location.reload();
+    }
 </body>
 </html>
