--- a/seo.html
+++ b/seo.html
@@ -116,6 +116,9 @@
         <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="privacy.html">Privacy Policy</a></p>
     </div>
 </footer>
-
+<script>
+    function refreshPage() {
+        window.location.reload();
+    }
 </body>
 </html>
