--- a/lead-generation.html
+++ b/lead-generation.html
@@ -22,7 +22,9 @@
 <body>
 
 <nav>
-    <a href="#" class="logo" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
+    <div class="logo">
+        <a href="#" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
+    </div>
     <ul>
         <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#about">About</a></li>
