--- a/seo.html
+++ b/seo.html
@@ -22,7 +22,7 @@
 <body>
 
 <nav>
-    <div class="logo">
+ <div class="logo">
         <a href="#" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
     </div>
     <ul>
@@ -120,5 +120,6 @@
     function refreshPage() {
         window.location.reload();
     }
+</script>
 </body>
 </html>
