--- a/lead-generation.html
+++ b/lead-generation.html
@@ -22,6 +22,7 @@
 <body>
 
 <nav>
+    <div class="logo">Aamir<span>Shahzad</span></div>
     <ul>
         <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#about">About</a></li>
