--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -23,9 +23,7 @@
 <body>
 
 <nav>
-    <div class="logo">
-        <a href="#" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
-    </div>
+    <a href="#" class="logo" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
     <ul>
         <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#about">About</a></li>
