--- a/seo.html
+++ b/seo.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SEO Services | Aamir Shahzad</title>
 
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/My-Portfolio/images/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/Y94XQYTg/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://i.postimg.cc/MpCXWSqS/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/MKb8cJ7w/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="https://i.postimg.cc/fW1b7sS0/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="https://i.postimg.cc/kXZWtLqj/android-chrome-512x512.png">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.postimg.cc/MpCXWSqS/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/MKb8cJ7w/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://i.postimg.cc/fW1b7sS0/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://i.postimg.cc/kXZWtLqj/android-chrome-512x512.png">
+    <link rel="manifest" href="site.webmanifest">
 
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7f6f16d9c2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
 <nav>
- <a href="#" class="logo" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
+    <a href="index.html" class="logo">Aamir<span>Shahzad</span></a>
     <ul>
         <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#about">About</a></li>
@@ -48,10 +48,8 @@
 
     <div class="project-content">
         <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="SEO Services Project" class="project-img">
-
         <h2>Project Overview</h2>
         <p>My SEO services are designed to help businesses rank higher on search engines and attract targeted traffic. This project involved a complete SEO audit and the implementation of on-page and off-page optimization strategies.</p>
-
         <h2 id="on-page-seo">Key Responsibilities & Deliverables</h2>
         <ul>
             <li><strong>Keyword Research:</strong> Identified high-volume, low-competition keywords to target.</li>
@@ -59,10 +57,8 @@
             <li><strong>Off-Page SEO:</strong> Built high-quality backlinks through guest blogging and link outreach.</li>
             <li><strong>Technical SEO:</strong> Addressed website speed and mobile-friendliness to improve user experience.</li>
         </ul>
-
         <h2>Results</h2>
         <p>Within three months, the client's website saw a <strong>45% increase in organic traffic</strong> and achieved top-10 rankings for several key search terms.</p>
-
         <a href="index.html#contact" class="btn">Boost Your SEO Now</a>
     </div>
 </section>
@@ -71,8 +67,8 @@
     <div class="footer-top">
         <div class="logo-col">
             <a href="index.html" class="footer-logo-link">
-            <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
-         </a>
+                <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
+            </a>
             <p class="tagline">Designing Dreams, Crafting Reality</p>
         </div>
         <div class="footer-right">
@@ -82,8 +78,8 @@
                     <li><a href="index.html#about">My Story</a></li>
                     <li><a href="index.html#services">Services</a></li>
                     <li><a href="index.html#portfolio">Portfolio</a></li>
-                    <li><a href="index.html#certifications">My Certificates</a></li>
-                    <li><a href="https://linktr.ee/aamirinfo" target="_blank">My Social Media</a></li>
+                    <li><a href="index.html#certifications">Certificates</a></li>
+                    <li><a href="https://linktr.ee/aamirinfo" target="_blank">Follow me</a></li>
                 </ul>
             </div>
             <div class="footer-col">
@@ -114,9 +110,10 @@
         <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="privacy.html">Privacy Policy</a></p>
     </div>
 </footer>
+
 <script>
     function refreshPage() {
-        window.location.reload();
+        window.location.href = "index.html"; // Redirect to home page
     }
 </script>
 </body>
