--- a/lead-generation.html
+++ b/lead-generation.html
@@ -22,7 +22,7 @@
 <body>
 
 <nav>
-    <div class="logo">Aamir<span>Shahzad</span></div>
+    <a href="#" class="logo" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
     <ul>
         <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#about">About</a></li>
@@ -116,6 +116,10 @@
         <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="privacy.html">Privacy Policy</a></p>
     </div>
 </footer>
-    
+<script>
+    function refreshPage() {
+        window.location.reload();
+    }
+  </script>     
 </body>
 </html>
