--- a/outreach.html
+++ b/outreach.html
@@ -5,27 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outreach Campaigns | Aamir Shahzad</title>
 
-    <link rel="icon" type="image/x-icon" href="/My-Portfolio/images/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/Y94XQYTg/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://i.postimg.cc/MpCXWSqS/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/MKb8cJ7w/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="https://i.postimg.cc/fW1b7sS0/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="https://i.postimg.cc/kXZWtLqj/android-chrome-512x512.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/Y94XQYTg/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.postimg.cc/MpCXWSqS/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/MKb8cJ7w/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://i.postimg.cc/fW1b7sS0/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://i.postimg.cc/kXZWtLqj/android-chrome-512x512.png">
+    <link rel="manifest" href="site.webmanifest">
     
     <link rel="stylesheet" href="style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7f6f16d9c2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
 <nav>
-    <div class="logo">
-        <a href="#" class="logo" onclick="refreshPage()">Aamir<span>Shahzad</span></a>
-    </div>
+    <a href="index.html" class="logo">Aamir<span>Shahzad</span></a>
     <ul>
         <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#about">About</a></li>
@@ -72,9 +68,9 @@
 <footer class="footer">
     <div class="footer-top">
         <div class="logo-col">
-        <a href="index.html" class="footer-logo-link">
-        <img src="https://i.postimg.cc/7YsKjswJ/MY-LOGO.png" alt="Logo">
-    </a>
+            <a href="index.html" class="footer-logo-link">
+                <img src="https://i.postimg.cc/7YsKjswJ/MY-LOGO.png" alt="Logo">
+            </a>
             <p class="tagline">Designing Dreams, Crafting Reality</p>
         </div>
         <div class="footer-right">
@@ -116,9 +112,15 @@
         <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="privacy.html">Privacy Policy</a></p>
     </div>
 </footer>
+
 <script>
-    function refreshPage() {
-        window.location.reload();
+    // Logo par click karne se home page par redirect karega
+    const logoLink = document.querySelector('nav .logo');
+    if (logoLink) {
+        logoLink.addEventListener('click', function(e) {
+            e.preventDefault(); // Default anchor behavior ko roke
+            window.location.href = 'index.html'; // Home page par redirect kare
+        });
     }
 </script>
 </body>
