--- a/outreach.html
+++ b/outreach.html
@@ -80,8 +80,8 @@
                     <li><a href="index.html#about">My Story</a></li>
                     <li><a href="index.html#services">Services</a></li>
                     <li><a href="index.html#portfolio">Portfolio</a></li>
-                    <li><a href="index.html#certifications">My Certificates</a></li>
-                    <li><a href="https://linktr.ee/aamirinfo" target="_blank">My Social Media</a></li>
+                    <li><a href="index.html#certifications">Certificates</a></li>
+                    <li><a href="https://linktr.ee/aamirinfo" target="_blank">Follow me</a></li>
                 </ul>
             </div>
             <div class="footer-col">
