--- a/index.html
+++ b/index.html
@@ -177,6 +177,28 @@
         </div>
         </section>
 
+    <section id="counter" class="counter">
+        <h2>My <span>Achievements</span></h2>
+        <div class="counter-container">
+            <div class="counter-box">
+                <h3 data-target="200">0</h3>
+                <p>Projects Completed</p>
+            </div>
+            <div class="counter-box">
+                <h3 data-target="180">0</h3>
+                <p>Happy Clients</p>
+            </div>
+            <div class="counter-box">
+                <h3 data-target="2">0</h3>
+                <p>Experience Years</p>
+            </div>
+            <div class="counter-box">
+                <h3 data-target="15">0</h3>
+                <p>Certifications</p>
+            </div>
+        </div>
+    </section>
+    
         <section id="reviews" class="reviews"> 
         <div class="reviews">
             <h2>Client <span>Reviews</span></h2>
