--- a/index.html
+++ b/index.html
@@ -635,5 +635,34 @@ if (certsContainer && certsDotsContainer) {
         window.location.reload();
     }
    </script>
+    <script>
+// Paste the counter code here
+const counters = document.querySelectorAll(".counter");
+const startCounter = (counter) => {
+    let target = +counter.getAttribute("data-target");
+    let count = 0;
+    let speed = target / 60;
+    const updateCount = () => {
+        if (count < target) {
+            count += speed;
+            counter.innerText = Math.floor(count);
+            requestAnimationFrame(updateCount);
+        } else {
+            counter.innerText = target;
+        }
+    };
+    updateCount();
+};
+const observer = new IntersectionObserver((entries, obs) => {
+    entries.forEach(entry => {
+        if (entry.isIntersecting) {
+            startCounter(entry.target);
+            obs.unobserve(entry.target);
+        }
+    });
+}, { threshold: 0.5 });
+counters.forEach(counter => observer.observe(counter));
+</script>
+    
 </body>
 </html>
