--- a/index.html
+++ b/index.html
@@ -199,27 +199,35 @@
     </div>
 </section> 
     
-        <section id="reviews" class="reviews"> 
-            <h2>Client <span>Reviews</span></h2>
-            <div class="review-slider">
-                <div class="review active">
-                    <img class="client-pic" src="https://i.postimg.cc/L80RHS3r/Ben-Miller.jpg" alt="Ben Miller">
-                    <p>"Working with Aamir has been a game-changer. The leads were high-quality, and conversion rates improved drastically."</p>
-                    <h4>Ben Miller</h4>
-                </div>
-                <div class="review">
-                    <img class="client-pic" src="https://i.postimg.cc/9FmjZ0x6/James-Elliott.jpg" alt="James Elliott">
-                    <p>"Professional service, clear communication & excellent results. Highly recommend!"</p>
-                    <h4>James Elliott</h4>
-                </div>
-                <div class="review">
-                    <img class="client-pic" src="https://i.postimg.cc/MTBj7dGp/Saurab-Khajuria.jpg" alt="Saurab Khajuria">
-                    <p>"Very impressed with the research depth & responsiveness. My sales enquiries increased."</p>
-                    <h4>Saurab Khajuria</h4>
-                </div>
-            </div>
-        <div class="review-dots"></div>
-    </section>
+  <!-- ================= REVIEWS ================= -->
+<section id="reviews" class="reviews animate">
+  <h2>Client <span>Reviews</span></h2>
+  <div class="review-container">
+
+    <div class="review-card">
+      <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Client Photo" class="review-img">
+      <h3>Ben Miller</h3>
+      <div class="stars">★★★★★</div>
+      <p>"Working with Aamir has been a game-changer. The leads were high-quality, and conversion rates improved drastically."</p>
+    </div>
+
+    <div class="review-card">
+      <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Client Photo" class="review-img">
+      <h3>James Elliott</h3>
+      <div class="stars">★★★★★</div>
+      <p>"Professional service, clear communication & excellent results. Highly recommend!"</p>
+    </div>
+
+    <div class="review-card">
+      <img src="https://randomuser.me/api/portraits/men/76.jpg" alt="Client Photo" class="review-img">
+      <h3>Saurab Khajuria</h3>
+      <div class="stars">★★★★★</div>
+      <p>"Very impressed with the research depth & responsiveness. My sales enquiries increased."</p>
+    </div>
+
+  </div>
+</section>
+
 
     <section id="certifications" class="certifications">
         <h2 >My <span>Certificates</span></h2>
