--- a/index.html
+++ b/index.html
@@ -204,19 +204,19 @@
   <h2 class="animate">Client <span>Reviews</span></h2>
   <div class="review-container">
     <div class="review-card animate">
-      <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Client Photo" class="review-img">
+      <img src="https://i.postimg.cc/L80RHS3r/Ben-Miller.jpg alt="Client Photo" class="review-img">
       <h3>Ben Miller</h3>
       <div class="stars">★★★★★</div>
       <p>"Working with Aamir has been a game-changer. The leads were high-quality, and conversion rates improved drastically."</p>
     </div>
     <div class="review-card animate">
-      <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Client Photo" class="review-img">
+      <img src="https://i.postimg.cc/9FmjZ0x6/James-Elliott.jpg" alt="Client Photo" class="review-img">
       <h3>James Elliott</h3>
       <div class="stars">★★★★★</div>
       <p>"Professional service, clear communication & excellent results. Highly recommend!"</p>
     </div>
     <div class="review-card animate">
-      <img src="https://randomuser.me/api/portraits/men/76.jpg" alt="Client Photo" class="review-img">
+      <img src="https://i.postimg.cc/MTBj7dGp/Saurab-Khajuria.jpg" alt="Client Photo" class="review-img">
       <h3>Saurab Khajuria</h3>
       <div class="stars">★★★★★</div>
       <p>"Very impressed with the research depth & responsiveness. My sales enquiries increased."</p>
