--- a/index.html
+++ b/index.html
@@ -83,28 +83,37 @@
 </div>
         </div>
         
-        <div class="about-cards-container"> <div class="card">
-                <i class="fas fa-users"></i>
-                <h3>B2B & B2C Leads</h3>
-                <p>High-quality, verified leads for your business</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-search"></i>
-                <h3>Targeted Lists</h3>
-                <p>Customized prospect lists for any industry</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-envelope"></i>
-                <h3>Outreach Campaigns</h3>
-                <p>Personalized communication strategies</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-chart-line"></i>
-                <h3>SEO Strategies</h3>
-                <p>Proven methods to expand your network</p>
-            </div>
+        
+        <div class="about-cards-container">
+    <div class="card card-top">
+        <div class="card-content">
+            <i class="fas fa-users"></i>
+            <h3>B2B & B2C Leads</h3>
+            <p>High-quality, verified leads for your business</p>
         </div>
     </div>
+    <div class="card card-left">
+        <div class="card-content">
+            <i class="fas fa-search"></i>
+            <h3>Targeted Lists</h3>
+            <p>Customized prospect lists for any industry</p>
+        </div>
+    </div>
+    <div class="card card-right">
+        <div class="card-content">
+            <i class="fas fa-envelope"></i>
+            <h3>Outreach Campaigns</h3>
+            <p>Personalized communication strategies</p>
+        </div>
+    </div>
+    <div class="card card-bottom">
+        <div class="card-content">
+            <i class="fas fa-chart-line"></i>
+            <h3>SEO Strategies</h3>
+            <p>Proven methods to expand your network</p>
+        </div>
+    </div>
+</div>
 </section> 
 
     <section class="services" id="services">
