--- a/index.html
+++ b/index.html
@@ -83,34 +83,33 @@
 </div>
         </div>
         
-        
-        <div class="about-cards-container">
-    <div class="card card-top">
-        <div class="card-content">
-            <i class="fas fa-users"></i>
-            <h3>B2B & B2C Leads</h3>
-            <p>High-quality, verified leads for your business</p>
+         <div class="about-services-list">
+    <div class="service-item">
+        <i class="fas fa-bullseye"></i>
+        <div class="service-text">
+            <h4>B2B & B2C Lead Generation</h4>
+            <p>High-quality, verified leads to grow your business.</p>
         </div>
     </div>
-    <div class="card card-left">
-        <div class="card-content">
-            <i class="fas fa-search"></i>
-            <h3>Targeted Lists</h3>
-            <p>Customized prospect lists for any industry</p>
+    <div class="service-item">
+        <i class="fas fa-id-card-alt"></i>
+        <div class="service-text">
+            <h4>Targeted List Building</h4>
+            <p>Customized prospect lists for any niche.</p>
         </div>
     </div>
-    <div class="card card-right">
-        <div class="card-content">
-            <i class="fas fa-envelope"></i>
-            <h3>Outreach Campaigns</h3>
-            <p>Personalized communication strategies</p>
+    <div class="service-item">
+        <i class="fas fa-envelope-open-text"></i>
+        <div class="service-text">
+            <h4>Outreach Campaigns</h4>
+            <p>Personalized communication strategies.</p>
         </div>
     </div>
-    <div class="card card-bottom">
-        <div class="card-content">
-            <i class="fas fa-chart-line"></i>
-            <h3>SEO Strategies</h3>
-            <p>Proven methods to expand your network</p>
+    <div class="service-item">
+        <i class="fas fa-rocket"></i>
+        <div class="service-text">
+            <h4>Strategic Growth</h4>
+            <p>Proven methods to expand your network.</p>
         </div>
     </div>
 </div>
