--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </p>
             <div class="btn-group">
     <a href="#contact" class="btn btn-primary">Let's Connect</a>
-    <a href="aamir-shahzad-cv.pdf.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
+    <a href="aamir-shahzad-cv.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
 </div>
         </div>
         
