--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
         </div>
         <div class="certificates-container">
             <div class="cert-item">
-                <h3>Google IT Support Professional Certificate</h3>
-                <p>Issued by: Google</p>
-                <a href="https://www.coursera.org/verify/certificate-link-here" target="_blank" class="cert-link">View Certificate</a>
+                <h3>CRM Certificate</h3>
+                <p>Issued by: SIMPLEiLEARN</p>
+                <a href="crm-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
                 <h3>Meta Front-End Developer Certificate</h3>
