--- a/index.html
+++ b/index.html
@@ -278,49 +278,49 @@
                 <a href="crm-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Meta Front-End Developer Certificate</h3>
-                <p>Issued by: Meta</p>
-                <a href="https://www.coursera.org/verify/another-certificate-link-here" target="_blank" class="cert-link">View Certificate</a>
+                <h3>Lead Gen with AI</h3>
+                <p>Issued by: SIMPLEiLEARN</p>
+                <a href="lead-gen-with-ai-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Data Analytics Professional Certificate</h3>
-                <p>Issued by: IBM</p>
-                <a href="https://www.coursera.org/verify/ibm-certificate-link-here" target="_blank" class="cert-link">View Certificate</a>
+                <h3>Customer Experience for Business Success</h3>
+                <p>Issued by: HP LIFE</p>
+                <a href="aamir-shahzad-customer-experience-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Digital Marketing Specialization</h3>
-                <p>Issued by: University of Illinois</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
+                <h3>Business Email Certificate</h3>
+                <p>Issued by: HP LIFE</p>
+                <a href="aamir-shahzad-hp-email-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Project Management</h3>
-                <p>Issued by: Google</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
+                <h3>Hubspot Marketing Tool</h3>
+                <p>Issued by: Hubspot</p>
+                <a href="aamir-shahzad-hubspot-marketing-tool.png" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Content Strategy for Professionals</h3>
-                <p>Issued by: Northwestern University</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
+                <h3>Google Sheet Certificate</h3>
+                <p>Issued by: SIMPLEiLEARN</p>
+                <a href="google-sheet-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Search Engine Optimization (SEO)</h3>
-                <p>Issued by: University of California, Davis</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
+                <h3>Advanced Spreadsheet Certificate</h3>
+                <p>Issued by: SIMPLEiLEARN</p>
+                <a href="advanced-google-sheet-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Introduction to HTML5</h3>
-                <p>Issued by: University of Michigan</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
+                <h3>Essential SEO Certificate</h3>
+                <p>Issued by: Semrush</p>
+                <a href="aamir-shahzad-seo-essential-course.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Introduction to CSS3</h3>
-                <p>Issued by: University of Michigan</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
+                <h3>SEO Crash Certificate</h3>
+                <p>Issued by: Semrush</p>
+                <a href="aamir-shahzad-seo-crash-course.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>JavaScript Basics</h3>
-                <p>Issued by: University of California, Davis</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
+                <h3>Led SEO Certificate</h3>
+                <p>Issued by: Semrush</p>
+                <a href="aamir-shahzad-led-seo-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
                 <h3>Lead Generation Fundamentals</h3>
