--- a/index.html
+++ b/index.html
@@ -283,6 +283,11 @@
                 <a href="lead-gen-with-ai-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
+                <h3>Email Marketing Certified</h3>
+                <p>Issued by: HubSpot Academy</p>
+                <a href="digital-marketing-certified.png" target="_blank" class="cert-link">View Certificate</a>
+            </div>
+            <div class="cert-item">
                 <h3>Customer Experience for Business Success</h3>
                 <p>Issued by: HP LIFE</p>
                 <a href="aamir-shahzad-customer-experience-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
@@ -328,23 +333,8 @@
                 <a href="#" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Email Marketing Certified</h3>
-                <p>Issued by: HubSpot Academy</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
                 <h3>Social Media Marketing</h3>
                 <p>Issued by: Coursera</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Copywriting for Business</h3>
-                <p>Issued by: University of Pennsylvania</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
-            </div>
-            <div class="cert-item">
-                <h3>Data Science Fundamentals</h3>
-                <p>Issued by: IBM</p>
                 <a href="#" target="_blank" class="cert-link">View Certificate</a>
             </div>
         </div>
