--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="hero" id="home">
     <div id="particles-js"></div>
     <div class="hero-content"> <div class="hero-img">
-            <img src="https://i.postimg.cc/GhYXknHj/Fading-picture.png" alt="Aamir Shahzad">
+            <img src="fading-picture.png" alt="Aamir Shahzad">
         </div>
         <div class="hero-text">
             <h2>Hello, I'm</h2>
