--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <div class="footer-top">
             <div class="logo-col">
     <a href="/" class="footer-logo-link">
-        <img src="https://i.postimg.cc/7YsKjswJ/MY-LOGO.png" alt="Logo">
+        <img src="my-logo.png" alt="Logo">
     </a>
     <p class="tagline">Designing Dreams, Crafting Reality</p>
 </div>
