--- a/index.html
+++ b/index.html
@@ -288,6 +288,11 @@
                 <a href="digital-marketing-certified.png" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
+                <h3>Advanced Email Marketing</h3>
+                <p>Issued by: SIMPLEiLEARN</p>
+                <a href="advanced-email-marketing-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
+            </div>
+            <div class="cert-item">
                 <h3>Customer Experience for Business Success</h3>
                 <p>Issued by: HP LIFE</p>
                 <a href="aamir-shahzad-customer-experience-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
@@ -333,9 +338,9 @@
                 <a href="#" target="_blank" class="cert-link">View Certificate</a>
             </div>
             <div class="cert-item">
-                <h3>Social Media Marketing</h3>
-                <p>Issued by: Coursera</p>
-                <a href="#" target="_blank" class="cert-link">View Certificate</a>
+                <h3>Advanced Email Marketing</h3>
+                <p>Issued by: SIMPLEiLEARN</p>
+                <a href="advanced-email-marketing-certificate.pdf" target="_blank" class="cert-link">View Certificate</a>
             </div>
         </div>
         <div class="cert-dots"></div>
