--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -19,7 +19,7 @@
 <!-- Manifest (Optional for PWA) -->
 <link rel="manifest" href="site.webmanifest">
 
-    
+    <link rel="canonical" href="https://aamirportfolio.site/digital-marketing.html">
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
