--- a/lead-generation.html
+++ b/lead-generation.html
@@ -18,7 +18,7 @@
 
 <!-- Manifest (Optional for PWA) -->
 <link rel="manifest" href="site.webmanifest">
-
+    <link rel="canonical" href="https://aamirportfolio.site/lead-generation.html">
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
