--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
     <link rel="manifest" href="site.webmanifest">
 
+    <link rel="canonical" href="https://aamirportfolio.site/">
     <!-- Styles and Fonts -->
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
