--- a/outreach.html
+++ b/outreach.html
@@ -18,7 +18,7 @@
 
 <!-- Manifest (Optional for PWA) -->
 <link rel="manifest" href="site.webmanifest">
-    
+    <link rel="canonical" href="https://aamirportfolio.site/outreach.html">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
