--- a/privacy.html
+++ b/privacy.html
@@ -19,7 +19,7 @@
 <!-- Manifest (Optional for PWA) -->
 <link rel="manifest" href="site.webmanifest">
 
-    
+    <link rel="canonical" href="https://aamirportfolio.site/privacy.html">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
