--- a/seo.html
+++ b/seo.html
@@ -19,7 +19,7 @@
 <!-- Manifest (Optional for PWA) -->
 <link rel="manifest" href="site.webmanifest">
 
-
+    <link rel="canonical" href="https://aamirportfolio.site/seo.html">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
