--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 <div class="footer-col">
                     <h4>Resources</h4>
                     <ul>
-                        <li><a href="index.html#home">Blog</a></li>
+                        <li><a href="faqs.html">FAQ's/a></li>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
